force-app/main/default/objects/Job_Application__c/Job_Application__c.object-meta.xml
<CustomObject>
    <description>To store the Job application</description>
    <label>Job Application</label>
    <nameField>
        <displayFormat>JP-{00000}</displayFormat>
        <label>Job Application ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>