force-app/main/default/objects/Job_Application__c/fields/Candidate_ID__c.field-meta.xml
<CustomField>
    <fullName>Candidate_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate ID</label>
    <referenceTo>Candidate__c</referenceTo>
    <relationshipLabel>Job Applications</relationshipLabel>
    <relationshipName>Job_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>