force-app/main/default/objects/Job_Application__c/fields/Count_Of_review__c.field-meta.xml
<CustomField>
    <fullName>Count_Of_review__c</fullName>
    <label>Count Of review</label>
    <summaryForeignKey>Review__c.Job_Application_Number__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>