force-app/main/default/objects/Job_Application__c/fields/Cover_letter__c.field-meta.xml
<CustomField>
    <fullName>Cover_letter__c</fullName>
    <label>Cover letter</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>