force-app/main/default/objects/Job_Application__c/fields/Max_Review_Summary__c.field-meta.xml
<CustomField>
    <fullName>Max_Review_Summary__c</fullName>
    <label>Max Review Summary</label>
    <summarizedField>Review__c.Rating__c</summarizedField>
    <summaryForeignKey>Review__c.Job_Application_Number__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>