force-app/main/default/objects/Job_Application__c/fields/Min_Review_Rating__c.field-meta.xml
<CustomField>
    <fullName>Min_Review_Rating__c</fullName>
    <label>Min Review Rating</label>
    <summarizedField>Review__c.Rating__c</summarizedField>
    <summaryForeignKey>Review__c.Job_Application_Number__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>