force-app/main/default/objects/Job_Application__c/fields/Position_candidateID__c.field-meta.xml
<CustomField>
    <fullName>Position_candidateID__c</fullName>
    <formula>TEXT(Position_Name__r.Max_Pay__c) &amp; &quot; | &quot; &amp; TEXT(Position_Name__r.Minimum_Experience_Required__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Position &amp; candidateID</label>
    <type>Text</type>
</CustomField>