force-app/main/default/objects/Job_Application__c/fields/Sum_Of_Review_Rating__c.field-meta.xml
<CustomField>
    <fullName>Sum_Of_Review_Rating__c</fullName>
    <label>Sum Of Review Rating</label>
    <summarizedField>Review__c.Rating__c</summarizedField>
    <summaryForeignKey>Review__c.Job_Application_Number__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>