force-app/main/default/objects/Job_Application__c/fields/Total_Number_Of_Review__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_Of_Review__c</fullName>
    <label>Total Number Of Review</label>
    <summaryForeignKey>Review__c.Job_Application_Number__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>