force-app/main/default/objects/Job_Application__c/validationRules/Bypass_New_Position_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Bypass_New_Position_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL( Position_Name__r.Status__c , &quot;New Position&quot;),    NOT($Permission.Bypass_Validation)  )</errorConditionFormula>
    <errorMessage>Allow to edit only to System admin</errorMessage>
</ValidationRule>