force-app/main/default/objects/Job_Application__c/validationRules/Prevent_New_Position_Application.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_New_Position_Application</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Position_Name__r.Status__c , &quot;New Position&quot;)</errorConditionFormula>
    <errorDisplayField>Position_Name__c</errorDisplayField>
    <errorMessage>We can&#39;t apply for position because Position Status is New</errorMessage>
</ValidationRule>