force-app/main/default/objects/Job_Application__c/validationRules/Prevent_Owner_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Owner_Change</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( OwnerId )</errorConditionFormula>
    <errorDisplayField>OwnerId</errorDisplayField>
    <errorMessage>You cannot change the Owner of this Job Application record.</errorMessage>
</ValidationRule>